--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django-cors-headers = "*"
 "argon2" = "*"
 "psycopg2" = "*"
 "argon2-cffi" = "*"
+djangorestframework-jwt = "*"
 
 [dev-packages]
 
