--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,14 @@ version: '3'
 services:
   db:
     image: postgres
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=bgjournal
+    ports:
+      - "54332:5432"
   web:
     build: ""
-    command: python3 /bgjournal/bgjournal/manage.py runserver 0.0.0.0:8000
-    volumes:
-      - .:/bg-journal
     ports:
       - "8000:8000"
     depends_on:
