--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django-cors-headers = "*"
 "psycopg2" = "*"
 "argon2-cffi" = "*"
 djangorestframework-jwt = "*"
+"psycopg2-binary" = "*"
 
 [dev-packages]
 
