UPD: Move Dockerfile and Pipfiles to app dir
Root directory contains now docker-compose.yml and everything that is
needed to build bgjournal api is now in one directory

--- a/bgjournal/Dockerfile
+++ b/bgjournal/Dockerfile
@@ -6,4 +6,4 @@ RUN pip install pipenv
 ADD Pipfile /bg-journal/
 RUN pipenv install
 ADD . /bg-journal/
-CMD python3 /bg-journal/bgjournal/manage.py runserver 0.0.0.0:8000
+CMD python3 manage.py runserver 0.0.0.0:8000
