FIX: Fix referencing db container + compose file
Database 'db' container is earchable via 'db' hostname so we can use it
to point to proper database instance when running via docker-compose

Fix bgjournal container by using name for it instead of building through
docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,10 @@
-#version: '3'
-#
-#services:
-#  db:
-#    image: postgres
-#  web:
-#    build: ""
-#    ports:
-#      - "8000:8000"
-#    depends_on:
-#      - db
-
-
-
-version: "2"
+version: '3'
 services:
+  db:
+    image: postgres
   web:
-    build: .
+    image: bgjournal/api
     ports:
-      - "8000:8000"
+      - 8000:8000
+    depends_on:
+      - db
