add run sh and modify dockerfile

--- a/bgjournal/Dockerfile
+++ b/bgjournal/Dockerfile
@@ -6,4 +6,5 @@ RUN pip install pipenv
 ADD Pipfile /bg-journal/
 RUN pipenv install
 ADD . /bg-journal/
-CMD python3 manage.py runserver 0.0.0.0:8000
+#CMD python3 manage.py runserver 0.0.0.0:8000
+CMD ["./run.sh"]
