--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,8 @@ crashlytics-build.properties
 fabric.properties
 
 .idea/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
